no fitness-estimator required for above relative (top) and above absolute